--- a/pages/index.html
+++ b/pages/index.html
@@ -47,7 +47,7 @@
 
         <div class="d-flex gap-3">
           <!-- Inbox card -->
-          <div class="d-flex flex-column">
+          <div class="d-flex flex-column w-25">
             <!-- dropdown -->
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
@@ -110,7 +110,7 @@
           </div>
 
           <!-- Message box card-->
-          <div class="assignment-message">
+          <div class="assignment-message w-75">
             <p class="pt-2 pb-3 text-end fs-7 text-gray-600">2 comments</p>
 
             <div class="card border border-light-subtle rounded-top-1 mb-3">
