--- a/pages/index.html
+++ b/pages/index.html
@@ -10,10 +10,10 @@
     <div class="d-flex">
       <%- include('./layout/header', {page: "assignment"}); -%>
       
-      <main class="px-4 content">
-        <header class="py-4 d-flex justify-content-between align-items-center">
+      <main class="px-5 content">
+        <header class="py-5 d-flex justify-content-between align-items-center">
           <nav class="navbar navbar-expand-lg py-0">
-            <div class="container-fluid">
+            <div class="container-fluid py-0">
               <h1 class="navbar-brand fs-4 fw-bold text-gray-900">Assignment</h1>
               
               <ul class="navbar-nav">
@@ -32,12 +32,12 @@
           </nav>
 
           <div class="d-flex gap-3 ">
-            <a href="#" class="d-inline-flex">
+            <a href="#" class="d-inline-flex icon-btn">
               <span class="material-symbols-outlined">
                 search
               </span>
             </a>
-            <a href="#" class="d-inline-flex">
+            <a href="#" class="d-inline-flex icon-btn">
               <span class="material-symbols-outlined">
                 notifications_active
               </span>
@@ -109,7 +109,7 @@
             </div>
           </div>
 
-          <!-- Message box card-->
+          <!-- message box card-->
           <div class="assignment-message w-75">
             <p class="pt-2 pb-3 text-end fs-8 text-gray-600">2 comments</p>
 
@@ -125,7 +125,7 @@
                   </span>
                 </a>
               </div>
-              <div class="card-body pt-3 ps-3 pe-4">
+              <div class="card-body pt-3 ps-3 pe-5">
                 <!-- message account header -->
                 <div class="d-flex align-items-center pb-3">
                   <div class="flex-shrink-0">
@@ -141,7 +141,7 @@
                   </div>
                 </div>
                 <!-- message content -->
-                <div class="fs-7 ps-5">
+                <div class="fs-7 ps-6">
                   <p class="card-text pb-3">
                     Hi Teacher, the attached file is my homework of chapter 2. And here comes a question: Why in the following code the height of the <code>div</code> is bigger than the height of the <code>img</code>? There is a gap below the image, but it doesn’t seems to be a padding/margin. What is the gap or extra space below image?
                   </p>
@@ -156,7 +156,7 @@
               </div>
 
               <!-- Reply -->
-              <div class="card-body ps-3 pe-4 pb-4 pt-0">
+              <div class="card-body ps-3 pe-5 pb-4 pt-0">
                 <!-- message account header -->
                 <div class="assignment-message-header d-flex justify-content-between">
                   <div class="d-flex align-items-center pb-3">
@@ -173,17 +173,17 @@
                     </div>
                   </div>
                   <div class="assignment-message-tool">
-                    <a href="#">
+                    <a href="#" class="icon-btn">
                       <span class="material-symbols-outlined icon-unfilled me-4">star</span>
                     </a>
-                    <a href="#">
+                    <a href="#" class="icon-btn">
                       <span class="material-symbols-outlined">edit</span>
                     </a>
                   </div>
                 </div>
 
                 <!-- message content -->
-                <p class="fs-7 card-text ps-5">
+                <p class="fs-7 card-text ps-6">
                   Hi David, by default, an image is rendered inline, like a letter so it sits on the same line that a, b, c and d sit on. There is space below that line for the descenders you find on letters like g, j, p and q. 
                   <br><br>
                   You can: 　
@@ -305,15 +305,9 @@
             </footer>
           </div>
 
-
         </div>
       </main>
     </div>
-
-
-
-
-    <!-- <%- include('./layout/footer'); -%> -->
 
     <script type="module" src="../main.js"></script>
   </body>
