--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <main class="px-5 content">
         <header class="py-5 d-flex justify-content-between align-items-center">
           <nav class="navbar navbar-expand-lg py-0">
-            <div class="container-fluid py-0">
+            <div class="container-fluid px-0">
               <h1 class="navbar-brand fs-4 fw-bold text-gray-900">Assignment</h1>
               
               <ul class="navbar-nav">
