--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
       <main class="px-5 content">
         <header class="py-5 d-flex justify-content-between align-items-center">
           <nav class="navbar navbar-expand-lg py-0">
-            <div class="container-fluid px-0">
+            <div class="container-fluid px-0 align-items-stretch">
               <h1 class="navbar-brand fs-4 fw-bold text-gray-900">Assignment</h1>
               
               <ul class="navbar-nav">
@@ -31,7 +31,7 @@
             </div>
           </nav>
 
-          <div class="d-flex gap-3 ">
+          <div class="d-flex gap-3">
             <a href="#" class="d-inline-flex icon-btn">
               <span class="material-symbols-outlined">
                 search
