--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
-    <script type="module" crossorigin src="/bs-answer-dashboard/assets/main-02554489.js"></script>
-    <link rel="stylesheet" href="/bs-answer-dashboard/assets/main-d3f546b7.css">
+    <script type="module" crossorigin src="/bs-answer-dashboard/assets/bootstrap.min-3a530117.js"></script>
+    <link rel="stylesheet" href="/bs-answer-dashboard/assets/bootstrap-d3f546b7.css">
   </head>
   <body>
     <div class="d-flex">
@@ -78,7 +78,7 @@
       <main class="px-5 content">
         <header class="py-5 d-flex justify-content-between align-items-center">
           <nav class="navbar navbar-expand-lg py-0">
-            <div class="container-fluid px-0">
+            <div class="container-fluid px-0 align-items-stretch">
               <h1 class="navbar-brand fs-4 fw-bold text-gray-900">Assignment</h1>
               
               <ul class="navbar-nav">
@@ -96,7 +96,7 @@
             </div>
           </nav>
 
-          <div class="d-flex gap-3 ">
+          <div class="d-flex gap-3">
             <a href="#" class="d-inline-flex icon-btn">
               <span class="material-symbols-outlined">
                 search
